--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,14 +7,14 @@ const experiences = [
     title: "Consultor de Soporte e Implementación",
     company: "Brio Team",
     description:
-      "Tareas: Especialista en implementación y desarrollo de software, digitalizar formularios, uso de excel, etc.",
+      "Especialista en implementación y desarrollo de software, digitalizar formularios, uso de excel, entre otras cosas.",
   },
   {
     date: "Nov 2021 - Abr 2023",
     title: "Empleado de Atención al Cliente - Tiempo Completo",
     company: "YPF A.M GAS SA",
     description:
-      "Tareas: Cargado de combustible, manejo de caja y dinero, limpieza,etc.",
+      "Cargado de combustible, manejo de caja y dinero, limpieza.",
   },
 ];
 ---
