--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,7 +36,7 @@ const PROJECTS = [
   {
     title: "Psicopedagogos Santa Fe",
     description:
-      "Aplicacion web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc. Desarrollada en Wordpress.",
+      "Aplicación web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc. Desarrollada en Wordpress.",
     link: "https://psicopedagogossantafe.org/",
     image: "/img/projects/psicopedagogia.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
