agregado de proyecto de amigo peludo

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -18,6 +18,22 @@ const TAGS = {
 };
 const PROJECTS = [
   {
+    title: "Amigo Peludo",
+    description:
+      "Aplicación web diseñada para centralizar la adopción, rescate y otros servicios para ayudar a todas las mascotas. Tiene como funcionalidad publicar anuncios para dar en adopción a una mascota, buscar una que se ha perdido, o informar sobre una mascota que has encontrado. Desarrollada con Java, Spring Boot, Next.js, React, TypeScript y Tailwind CSS.",
+    link: "https://www.amigopeludo.website/",
+    image: "/img/projects/amigo-peludo.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
+  },
+  {
+    title: "Psicopedagogos Santa Fe",
+    description:
+      "Aplicación web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc. Desarrollada en Wordpress.",
+    link: "https://psicopedagogossantafe.org/",
+    image: "/img/projects/psicopedagogia.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
+  },
+  {
     title: "Bloom Studio",
     description:
       "Esta web esta destinada a un studio de belleza, la misma cuenta con funcionalidades como: Pagos integrados utilizando Mercado pago, sistema de reservas,envios de comprobantes via email, entre otros. Tambien cuenta con un dashboard del lado del profesional para llevar un control de reservas, historial de pagos, agregar o eliminar contenido del book, etc. Desarrollada con Java, Next.js, React y Tailwind CSS.",
@@ -31,14 +47,6 @@ const PROJECTS = [
       "Plataforma gratuita. La web se trata de venta de cursos por Macarena Bernal (creados por ella) y seguimiento de los distintos cursos comprados por los usuarios (se otorgan certificados). Desarrollada con Node.js, Express, Mongoose, Next.js, React y Tailwind CSS.",
     link: "http://studiobym.com.ar/",
     image: "/img/projects/studioByM.webp",
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
-  },
-  {
-    title: "Psicopedagogos Santa Fe",
-    description:
-      "Aplicación web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc. Desarrollada en Wordpress.",
-    link: "https://psicopedagogossantafe.org/",
-    image: "/img/projects/psicopedagogia.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
 ];
